--- a/css/styles.css
+++ b/css/styles.css
@@ -3777,4 +3777,97 @@ a.icon.website {
   justify-content: center;
 }
 
+.background-video {
+  width: 100%;
+  height: 70vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.back-video {
+  position: fixed;
+  width: auto;
+  width: auto;
+  min-width: 100%;
+  min-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  object-fit: cover;
+}
+
+.header-content {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  top: 10%; 
+}
+
+.text-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+}
+
+.text-content h1, .text-content .slogan-enhanced .slogan-long {
+  color: white;
+  text-align: left;
+  margin-left: 20px; /* Add spacing between the text and the blue bar */
+}
+
+.blue-bar {
+  background-color: #50cec1; /* Change this to your preferred blue color */
+  width: 8px; /* Adjust the width of the bar */
+  height: 100%;
+  position: absolute;
+}
+
+.vertical-text {
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  color: white;
+  margin-left: -40px; /* adjust this to position the vertical text correctly */
+  font-size: smaller; /* adjust this to suit your needs */
+}
+
+.slogan-long {
+  max-width: 50%;
+  font-size:x-large;
+  padding-left: 20px;
+  color: white;
+  line-height: 30px;
+}
+
+.slogan-enhanced {
+  margin:0px;
+  font-family:'Oswald-Medium';
+  font-size:x-large;
+  padding-left: 20px;
+  color: white;
+  line-height: 30px;
+}
+
+.logo {
+  width: 10px;  /* adjust to your preference */
+  height: auto;  /* maintain aspect ratio */
+}
+
+@media (max-width: 750px) {
+  .background-video{
+    height: 100%;
+  }
+  .slogan-long {
+    font-size: small; /* or any size suitable for smaller screens */
+    line-height: 15px;
+    max-width: 100%;
+  }
+}
+
+
+
 /*# sourceMappingURL=styles.css.map */
