--- a/css/styles.css
+++ b/css/styles.css
@@ -3904,6 +3904,7 @@ a.icon.website {
 .read-more-btn {
   color: #c30979;
   cursor: pointer;
+  font-size: 14px;
 }
 
 .read-more-text{
@@ -3913,5 +3914,155 @@ a.icon.website {
 .read-more-text--show{
   display: inline;
 }
+
+
+
+.panel_discussion{
+  background-color: #aeede8;
+  border-radius: 15px;
+  padding: 0px 15px 0px;
+}
+
+.panel_discussion .image {
+  border-radius: 50%;
+  max-width: 150px;
+  overflow: hidden;
+  margin: auto;
+}
+
+
+
+.panel_discussion .flex-item{
+  max-width: 200px;
+  border-radius: 0px;
+  margin: 10px;
+  padding: 10px;
+  
+}
+
+.panel_discussion h3{
+  margin-bottom: 0px;
+  padding-top: 10px;
+}
+
+.panel_discussion h4{
+  color: #c30979;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  line-height: 1.2;
+  font-size: 1.7rem;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.panel_discussion p{
+  font-size: 1rem;
+  line-height: 1.3;
+}
+
+
+
+.read-more-container .flex-item{
+  border: 2px solid white;
+  border-radius: 15px;
+}
+
+
+.day_selector{
+  color: lightgray;
+}
+
+.selected_day{
+  color: #c30979;
+}
+.day_selector, .selected_day {
+transition: all 0.3s ease;
+text-decoration: none;
+display: inline-block;
+}
+.day_selector:hover, .selected_day:hover {
+  transform: scale(1.1); /* Expands the text a little on hover */
+}
+
+.speaker h1{
+  font-size: 2rem;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #50cec1;
+  line-height: 1.3;
+}
+.speaker h3{
+  color: black;
+  font-size: 1.5rem;
+  text-align: left;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  line-height: 1.2;
+}
+
+.speaker h4{
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 1.2;
+  margin-bottom: 10px;
+}
+
+.speaker p{
+  margin-bottom: 7px;
+  margin-top: 7px;
+  font-size: 1rem;
+}
+
+.speaker{
+  margin: auto 10%;
+}
+
+@media only screen and (max-width: 767px){
+.speaker h1{
+  font-size: 1.5rem;
+}
+
+.speaker{
+  margin: auto 5%;
+}
+.speaker h3{
+  font-size: 1rem;
+  margin-top: 1.5rem;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 1.5rem;
+}
+
+.speaker h4{
+  font-size: 1rem;
+}
+.panel_discussion .flex-item{
+  max-width: 140px;
+  border-radius: 20px;
+  margin: 5px;
+  padding: 5px;
+  
+}
+
+.panel_discussion p{
+  font-size: 0.8rem;
+}
+
+.panel_discussion h3{
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+
+.panel_discussion{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
+}
+
+
 
 /*# sourceMappingURL=styles.css.map */
